--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,27 @@
 .homescreen {
   text-align: center;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-row: auto auto;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  margin: auto auto;
+  width: 25%;
+  height: 25%;
+}
+
+.link-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  border-style: solid;
+  border-color: black;
+  background-color: skyblue;
+}
+
+.home-link {
+  color: black;
+  font-family: cursive;
+  text-decoration: none;
 }
