started some css for navbar, added visualizations and resources pages with just initial setup

--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -5,3 +5,11 @@
 .commute-img-carousel-container img {
   max-height: 500px;
 }
+
+.diet-img-carousel-container img {
+  max-height: 500px;
+}
+
+.lights-img-carousel-container img {
+  max-height: 500px;
+}
