more small adjustments to navbar, changed home to ecoviz

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,4 +49,10 @@ nav {
 .nav-link {
   display: flex;
   margin-left: 50px;
+  text-decoration: none;
+  color: white;
+}
+
+#ecoviz {
+  font-weight: bold;
 }
