added margins to home links

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,28 +1,39 @@
 * {
-margin: 0;
-padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   margin: 0;
+  padding: 0;
   justify-content: center;
-  
 }
 
 content {
   display: flex;
+  flex: 1;
   margin: 0;
   padding: 0;
-  min-height: 100%;
+}
+
+footer {
+  bottom: 0;
+}
+
+.layout {
+  min-height: 100vh;
 }
 
 .homescreen {
-  padding: 10px;
+  /* padding: 10px; */
+  /* height: 100vh; */
 }
 
 .grid-container {
   display: grid;
+  justify-items: center;
   grid-template-columns: 1fr 1fr;
+  margin: 96px 190px 0px 190px;
 }
 
 /* .homescreen {
@@ -56,6 +67,7 @@ content {
   border-style: solid;
   border-color: black;
   background-color: skyblue;
+  margin-bottom: 88px;
 }
 
 .home-link {
@@ -71,7 +83,7 @@ content {
 
 nav {
   background-color: #7C7C7C;
-  width: 100vw;
+  /* width: 100vw; */
   height: 56px;
   display: flex;
 }
