--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,16 +64,16 @@ footer {
   align-items: center;
   justify-content: center;
   width: 366px;
-  border-style: solid;
-  border-color: black;
-  background-color: skyblue;
+  background-color: #ffff;
   margin-bottom: 88px;
 }
 
 .home-link {
   flex: 1 0 auto;
   color: black;
-  font-family: cursive;
+  font-family: Arial, Helvetica, sans-serif;
+}
+a {
   text-decoration: none;
 }
 
