--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,9 @@ footer {
 }
 
 .home-blurb {
-  font-size: 24px;
+  font-size: 26px;
+  font-family: Libre Franklin, sans-serif;
+  font-weight: bold;
   margin: 24px;
   padding: 10px;
   height: 48px;
@@ -95,7 +97,8 @@ a {
 }
 
 nav {
-  background-color: #7C7C7C;
+  background-color: #1B5E45;
+;
   /* width: 100vw; */
   height: 56px;
   display: flex;
@@ -113,6 +116,9 @@ nav {
   margin-left: 50px;
   text-decoration: none;
   color: white;
+  font-family: Libre Franklin, sans-serif;
+  font-weight: semi-bold;
+  font-size: 16px;
 }
 
 #ecoviz {
