--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,10 @@
 @font-face {
-    font-family: 'Selima';
-    src: local('Selima'), url(../fonts/selima_.ttf) format('truetype');
+  font-family: "Selima";
+  src: local("Selima"), url(../fonts/selima_.ttf) format("truetype");
+}
+
+:root {
+  --main: #1b5e45;
 }
 
 * {
@@ -19,10 +23,6 @@ content {
   flex: 1;
   margin: 0;
   padding: 0;
-}
-
-footer {
-  bottom: 0;
 }
 
 .layout {
@@ -98,29 +98,8 @@ a {
   width: 100%;
 }
 
-nav {
-  background-color: #1B5E45;
-;
-  /* width: 100vw; */
-  height: 56px;
-  display: flex;
-}
-
-.nav-links-container {
-  display: flex;
-  align-items: center;
-  margin-left: 10px;
-  justify-content: flex-start;
-}
-
-.nav-link {
-  display: flex;
-  margin-left: 50px;
-  text-decoration: none;
-  color: white;
-  font-family: Libre Franklin, sans-serif;
-  font-weight: semi-bold;
-  font-size: 16px;
+.homescreen {
+  min-height: 80vh;
 }
 
 #ecoviz {
