--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -92,6 +92,17 @@ content {
 }
 a {
   text-decoration: none;
+  transition: 0.2s;
+}
+
+.link-container a {
+  -webkit-box-shadow: 0px 10px 13px -7px #000000,
+    5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+}
+
+.link-container a:hover {
+  transform: scale(1.05);
 }
 
 .cover-image {
@@ -100,6 +111,11 @@ a {
 
 .homescreen {
   min-height: 80vh;
+}
+
+.home-link {
+  text-align: center;
+  padding: 0.3rem;
 }
 
 #ecoviz {
