minor adjustments to footer

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,11 +1,12 @@
 footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: bottom;
   background-color: var(--main);
   min-height: 12vh;
-  text-align: center;
 }
 
 footer p {
-  padding-top: 1rem;
   color: white;
 }
